--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <name>cs1632-cicd-junit</name>
   <description>An exercise demonstrating CI/CD through github actions.  It uses JUnit for unit testing.</description>
-  <url>https://github.com/wonsunahn/CS1632_CICD_JUnit</url>
+  <url>https://github.com/kenShegogue/CS1632_CICD_JUnit</url>
 
   <licenses>
     <license>
@@ -32,6 +32,14 @@
     <developerConnection>scm:git:ssh://github.com:wonsunahn/CS1632_CICD_JUnit.git</developerConnection>
     <url>http://github.com/wonsunahn/CS1632_CICD_JUnit/tree/master</url>
    </scm>
+
+    <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/CS1632/supplementary-exercise-4-ci-cd-pipelines-wonsunahn</url>
+    </repository>
+  </distributionManagement>
 
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
