--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <name>cs1632-cicd-junit</name>
   <description>An exercise demonstrating CI/CD through github actions.  It uses JUnit for unit testing.</description>
-  <url>https://github.com/kenShegogue/CS1632_CICD_JUnit</url>
+  <url>https://maven.pkg.github.com/CS1632/supplementary-exercise-4-ci-cd-pipelines-kenShegogue</url>
 
   <licenses>
     <license>
